--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-
-
-<!-- screen shots has api key and link tags for this assignment  -->
-
-
 <!DOCTYPE html>
 
 <html lang="en-us">
@@ -10,8 +5,6 @@
 
   <meta charset="UTF-8">
   
-
-  <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Bootstrap -->
@@ -89,17 +82,11 @@
       </div>
     </div>
   </div>
-<!-- 
+<!-- check file name link .js
 
+Script -->
 
-
-
-  check file name link .js
-
--->
- -->
-  <!-- Script -->
-  <script src="traintime-logic.js"></script>
+  <script src="logic.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
 
@@ -109,7 +96,7 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA4ibeyTije2SKL8hig6Ell09rWGQbM6GY",
+    apiKey: "AIzaSyDv3TIYUWL3UAm5ktAOqHZI8rvZr0Wmz4Y",
     authDomain: "train-station-ba27d.firebaseapp.com",
     databaseURL: "https://train-station-ba27d.firebaseio.com",
     projectId: "train-station-ba27d",
